--- a/public/styles/styleCalendario.css
+++ b/public/styles/styleCalendario.css
@@ -1,13 +1,11 @@
 html, body{
     width: 100%;
     height: 100%;
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-color: #ffe0ff;
 }
 
@@ -25,30 +23,33 @@ form{
     background-color: #a384e6;
 }
 
-form >*{
+form > *{
     margin: 10px;
     font-size: 20px;
     font-family: sans-serif;
+}
+input{
+    border-radius: 10%;
 }
 
 div{
     display: flex;
     flex-direction: row;
 }
-
 button{
+    width: 100px;
+    height: 40px;
     border: 1px solid black;
     border-radius: 10%;
     border-bottom: 3px solid black;
     border-right: 3px solid black;
     background-color: #d1b2f2;
-    transition: all 0.2s ease;
-    margin: 20px;
-    width: 100px;
-    height: 40px;
     font-size: 20px;
     font-family: sans-serif;
+    margin: 20px;
+    transition: all 0.2s ease;
 }
+
 button:active{
     transform: translateY(10px);
 }
