--- a/public/styles/styleMostrarAgenda.css
+++ b/public/styles/styleMostrarAgenda.css
@@ -1,8 +1,6 @@
 html, body{
     width: 100%;
     height: 100%;
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -10,45 +8,45 @@ html, body{
     align-items: center;
     background-color: #ffe0ff;
 }
-
-form{
-    width: 300px;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid black;
-    border-radius: 10%;
-    border-bottom: 3px solid black;
-    border-right: 3px solid black;
-    background-color: #a384e6;
-}
-
-form >*{
-    margin: 10px;
-    font-size: 20px;
-    font-family: sans-serif;
-}
-
 div{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
-
 button{
+    width: 80px;
+    height: 50px;
+    font-size: 20px;
+    font-family: sans-serif;
+    margin: 20px;
+    transition: all 0.2s ease;
+    background-color: #d1b2f2;
     border: 1px solid black;
     border-radius: 10%;
     border-bottom: 3px solid black;
     border-right: 3px solid black;
-    background-color: #d1b2f2;
-    transition: all 0.2s ease;
-    margin: 20px;
-    width: 100px;
-    height: 40px;
-    font-size: 20px;
-    font-family: sans-serif;
 }
 button:active{
     transform: translateY(10px);
+}
+table{
+    border-collapse: collapse;
+}
+td,tr{
+    border: 1px solid black;
+    padding: 3px;
+    text-align: center;
+    background-color: #d1b2f2;
+    font-size: 20px;
+    font-family: sans-serif;
+}
+th{
+    background-color: #a384e6;
+    border: 1px solid black;
+    padding: 3px;
+    text-align: center;
+    font-size: 20px;
+    font-family: sans-serif;
 }
