--- a/public/styles/styleRegistroHistorico.css
+++ b/public/styles/styleRegistroHistorico.css
@@ -1,9 +1,9 @@
 html, body{
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,44 +11,45 @@ html, body{
     background-color: #ffe0ff;
 }
 
-form{
-    width: 300px;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid black;
-    border-radius: 10%;
-    border-bottom: 3px solid black;
-    border-right: 3px solid black;
-    background-color: #a384e6;
+table{
+    border-collapse: collapse;
 }
 
-form >*{
-    margin: 10px;
+td,tr{
+    border: 1px solid black;
+    padding: 3px;
+    text-align: center;
+    background-color: #d1b2f2;
     font-size: 20px;
     font-family: sans-serif;
 }
-
+th{
+    background-color: #a384e6;
+    border: 1px solid black;
+    padding: 3px;
+    text-align: center;
+    font-size: 20px;
+    font-family: sans-serif;
+}
 div{
     display: flex;
     flex-direction: row;
 }
 
 button{
+    width: 120px;
+    height: 80px;
+    margin: 20px;
+    background-color: #a384e6;
     border: 1px solid black;
     border-radius: 10%;
     border-bottom: 3px solid black;
     border-right: 3px solid black;
-    background-color: #d1b2f2;
     transition: all 0.2s ease;
-    margin: 20px;
-    width: 100px;
-    height: 40px;
     font-size: 20px;
     font-family: sans-serif;
 }
+
 button:active{
     transform: translateY(10px);
 }
