--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -28,7 +28,7 @@ button:active{
 .DivisorPantalla{
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
 
 .FlexForm{
