--- a/public/styles/styleConectarDisp.css
+++ b/public/styles/styleConectarDisp.css
@@ -20,8 +20,27 @@ button{
     border-right: 3px solid black;
     background-color: #d1b2f2;
     font-family: sans-serif;
+    transition: all 0.2s ease;
 }
 label{
     margin: 20px;
+    font-family: sans-serif;
+}
+
+button:active{
+    transform: translateY(10px);
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+
+.SensorNombre{
+    font-size: 25px;
     font-family: sans-serif;
 }
